# near_multibindgen_bug

./: Cargo.toml  README.org  build.sh
res/: market.wasm
src/: getters.rs  lib.rs
