[package]
name = "market"
version = "0.1.0"
authors = ["Thor Kamphefner <thorck@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = "4.0.0-pre.2"


[dev-dependencies]
near-sdk-sim = "4.0.0-pre.2"


[profile.release]
codegen-units = 1 # (default) don't parallelize release compilation
# Tell `rustc` to optimize for small code size.
opt-level = "z" # optimize for binary size and turn off loop vectorization
lto = true # reduce binary size
debug = false # don't include debug info, which slows down compilation
panic = "abort" # abort on reaching panic, do not continue building
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true
